<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/item_height"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:orientation="horizontal">

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="@dimen/item_image_width"
        android:layout_height="match_parent"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/prompt_empty_title"
            android:textColor="@color/Black"
            android:textSize="@dimen/item_text_title" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/prompt_empty_description"
            android:textSize="@dimen/item_text_description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_recruitment_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:layout_weight="2"
                android:text="@string/prompt_recruitment_number_txt"
                android:textColor="@color/Black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_member"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:text="@string/prompt_default_member"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/im_heart"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_gravity="bottom"
                android:layout_weight="0.5"
                android:src="@drawable/heart" />
            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1" />

            <TextView
                android:id="@+id/tv_heart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_weight="1"
                android:text="@string/prompt_zero" />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>