<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.SignUpActivity">

    <!-- // Toolbar layout for actionbar -->
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:id="@+id/toolbar_title"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <EditText
                        android:id="@+id/etName"
                        android:layout_width="300dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="150dp"
                        android:backgroundTint="@color/colorPrimary"
                        android:hint="@string/prompt_name"
                        android:inputType="textPersonName" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <EditText
                        android:id="@+id/etId"
                        android:layout_width="300dp"
                        android:layout_height="50dp"
                        android:backgroundTint="@color/colorPrimary"
                        android:hint="@string/prompt_id"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <EditText
                        android:id="@+id/etPw"
                        android:layout_width="300dp"
                        android:layout_height="50dp"
                        android:backgroundTint="@color/colorPrimary"
                        android:hint="@string/prompt_password"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <EditText
                        android:id="@+id/etPwConfirm"
                        android:layout_width="300dp"
                        android:layout_height="50dp"
                        android:backgroundTint="@color/colorPrimary"
                        android:hint="@string/prompt_pw_confirm"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <EditText
                        android:id="@+id/etPhoneCall"
                        android:layout_width="300dp"
                        android:layout_height="50dp"
                        android:backgroundTint="@color/colorPrimary"
                        android:hint="@string/prompt_phone_call"
                        android:inputType="phone" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="300dp"
                        android:layout_height="50dp"
                        android:backgroundTint="@color/colorPrimary"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <EditText
                        android:id="@+id/etAge"
                        android:layout_width="300dp"
                        android:layout_height="50dp"
                        android:backgroundTint="@color/colorPrimary"
                        android:hint="@string/prompt_age"
                        android:inputType="number" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <EditText
                        android:id="@+id/etJob"
                        android:layout_width="300dp"
                        android:layout_height="50dp"
                        android:backgroundTint="@color/colorPrimary"
                        android:hint="@string/prompt_job"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_custom"
            android:text="@string/prompt_done"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>