<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/item_height"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:orientation="horizontal">

    <android.support.v7.widget.CardView
        android:id="@+id/lecture_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/White"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/lecture_imgView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@color/colorPrimary" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical"
                android:paddingTop="16dp"
                android:paddingBottom="12dp"
                android:paddingLeft="20dp"
                android:paddingRight="16dp">

                <TextView
                    android:id="@+id/lecture_titleTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/prompt_empty_title"
                    android:textColor="@color/Black"
                    android:textSize="@dimen/item_text_title" />

                <TextView
                    android:id="@+id/lecture_descTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lecture_titleTv"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/prompt_empty_description"
                    android:textSize="@dimen/item_text_description" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_recruitment_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_recruitment_number_txt"
                        android:textColor="@color/Black"
                        android:textSize="12dp" />

                    <TextView
                        android:id="@+id/lecture_entryPeoCntTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/tv_recruitment_number"
                        android:paddingLeft="8dp"
                        android:text="@string/prompt_default_member"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12dp"
                        android:textStyle="bold" />


                    <LinearLayout
                        android:id="@+id/lecture_heartBtnLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <ToggleButton
                            android:id="@+id/lecture_heartBtn"
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:background="@drawable/button_heart"
                            android:checked="false"
                            android:text=""
                            android:textOff=""
                            android:textOn=""/>

                        <TextView
                            android:id="@+id/lecture_heartCnt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:text="163"
                            android:textSize="12dp" />
                    </LinearLayout>
                </RelativeLayout>

            </RelativeLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>